--- a/cat_dog_classification.ipynb
+++ b/cat_dog_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo/pzEH1lAqyogdqVMgGg8",
+      "authorship_tag": "ABX9TyMbpOt1EwWe46ZPkXxVPQ7T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,6 +118,8 @@
         "    fill_mode='nearest'\n",
         ")\n",
         "\n",
+        "# no argumentation only: image data is scaled to the range of 0 to 1 by dividing each pixel value by 255. \n",
+        "# common practice in image processing to ensure that the pixel values are in a suitable range for processing by the model.\n",
         "validation_datagen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
@@ -144,6 +146,8 @@
       "cell_type": "markdown",
       "source": [
         "## *Beispiel Augementierung eines Bildes*\n",
+        "\n",
+        "Hier wird die ImageDataGenerator-Instanz **train_datagen** verwendet um die Argumentation eines Beispielbildes zu veranschaulichen. \n",
         "\n",
         "\n",
         "\n"
@@ -184,7 +188,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Definition des Modells"
+        "## Definition des Modells\n",
+        "\n",
+        "In Keras ist das **Sequential-Modell** eine Möglichkeit, um Schichten eines neuronalen Netzwerks aufeinander zu stapeln. Das bedeutet, dass die Ausgabe einer Schicht direkt an die nächste Schicht weitergegeben wird. Ein Sequential-Modell ist somit eine lineare Schichtfolge, bei der jede Schicht genau eine Eingabe und eine Ausgabe hat. Dies ist die einfachste Art, ein neuronales Netzwerk in Keras zu definieren. Die einzelnen Schichtarten werden in der **README ausführlich** erklärt!\n",
+        "\n",
+        "Im nächsten Schritt wird der **Kompilierungsschritt** des Modells konfiguriert. Auf die einzelnen Werte wird wieder in der README eingeganen. \n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "4p06t6P-6w7z"
@@ -213,68 +223,33 @@
         "              optimizer= tf.optimizers.RMSprop(learning_rate=1e-4),\n",
         "              metrics=['acc'])\n",
         "\n",
+        "# shows each layer\n",
         "model.summary()"
       ],
       "metadata": {
-        "id": "oTveRchwXfxA",
-        "outputId": "c840bba3-bcd2-4011-c15d-e9af64f643c3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "oTveRchwXfxA"
       },
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Model: \"sequential_9\"\n",
-            "_________________________________________________________________\n",
-            " Layer (type)                Output Shape              Param #   \n",
-            "=================================================================\n",
-            " conv2d_36 (Conv2D)          (None, 148, 148, 32)      896       \n",
-            "                                                                 \n",
-            " max_pooling2d_36 (MaxPoolin  (None, 74, 74, 32)       0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " conv2d_37 (Conv2D)          (None, 72, 72, 64)        18496     \n",
-            "                                                                 \n",
-            " max_pooling2d_37 (MaxPoolin  (None, 36, 36, 64)       0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " conv2d_38 (Conv2D)          (None, 34, 34, 128)       73856     \n",
-            "                                                                 \n",
-            " max_pooling2d_38 (MaxPoolin  (None, 17, 17, 128)      0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " conv2d_39 (Conv2D)          (None, 15, 15, 128)       147584    \n",
-            "                                                                 \n",
-            " max_pooling2d_39 (MaxPoolin  (None, 7, 7, 128)        0         \n",
-            " g2D)                                                            \n",
-            "                                                                 \n",
-            " dropout_14 (Dropout)        (None, 7, 7, 128)         0         \n",
-            "                                                                 \n",
-            " flatten_9 (Flatten)         (None, 6272)              0         \n",
-            "                                                                 \n",
-            " dropout_15 (Dropout)        (None, 6272)              0         \n",
-            "                                                                 \n",
-            " dense_19 (Dense)            (None, 512)               3211776   \n",
-            "                                                                 \n",
-            " dense_20 (Dense)            (None, 1)                 513       \n",
-            "                                                                 \n",
-            "=================================================================\n",
-            "Total params: 3,453,121\n",
-            "Trainable params: 3,453,121\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Trainieren des Modells"
+        "## Trainieren des Modells\n",
+        "\n",
+        "In diesem Code-Abschnitt wird das Modell auf den Trainingsdaten **trainiert** und dabei eine **Validierung** anhand der Validierungsdaten durchgeführt. Die Trainingsdaten und die Validierungsdaten wurden zuvor als Daten-Generator mit der Klasse **ImageDataGenerator** erstellt und werden nun als **Argumente** an die fit-Methode des Modells übergeben.\n",
+        "\n",
+        "**Parameter:**\n",
+        "\n",
+        "**steps_per_epoch**: gibt die Anzahl der Schritte pro Epoche an, d.h. die Anzahl der Batches, die pro Epoche durchlaufen werden sollen. \n",
+        "\n",
+        "**epochs:** gibt die Anzahl der Epochen an, die das Modell trainiert werden soll. \n",
+        "\n",
+        "**validation_steps:**  Anzahl der Schritte (Batches), die pro Validierungs-Epoche durchlaufen werden sollen. \n",
+        "\n",
+        "Die fit-Methode führt das Training des Modells durch und gibt ein **history-Objekt zurück**, das die Informationen über die Trainingsgenauigkeit, Trainingsverlust, Validierungsgenauigkeit und Validierungsverlust in jeder Epoche enthält.\n",
+        "\n",
+        "**Da das Trainieren das Modells den heutigen Zeitraum sprengen würde werden wir das ein zuvor von mir trainiertes Modell in den weiteren Schritten verwenden**!"
       ],
       "metadata": {
         "id": "YACrxcXw67zx"
@@ -295,6 +270,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Validierung des Modells"
+      ],
+      "metadata": {
+        "id": "p8LDxx2JIOJw"
+      }
     },
     {
       "cell_type": "code",
@@ -374,12 +358,12 @@
         "print('Test accuracy:', test_acc)"
       ],
       "metadata": {
-        "id": "wd0GfBqEAvKT",
-        "outputId": "e108c339-4f6b-47ca-e2f1-b5ae29d44513",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 898
-        }
+        },
+        "id": "wd0GfBqEAvKT",
+        "outputId": "e108c339-4f6b-47ca-e2f1-b5ae29d44513"
       },
       "execution_count": 94,
       "outputs": [
@@ -452,12 +436,12 @@
         "cm_display = ConfusionMatrixDisplay(cm).plot()"
       ],
       "metadata": {
-        "id": "r8SO9pxLB1t0",
-        "outputId": "b63c2711-aad5-4f53-8faa-2f0dc456c504",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 954
-        }
+        },
+        "id": "r8SO9pxLB1t0",
+        "outputId": "b63c2711-aad5-4f53-8faa-2f0dc456c504"
       },
       "execution_count": 86,
       "outputs": [
@@ -490,54 +474,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "# folder path\n",
-        "dir_path = 'test/dogs'\n",
-        "count = 0\n",
-        "# Iterate directory\n",
-        "for path in os.listdir(dir_path):\n",
-        "    # check if current path is a file\n",
-        "    if os.path.isfile(os.path.join(dir_path, path)):\n",
-        "        count += 1\n",
-        "print('File count:', count)"
-      ],
-      "metadata": {
-        "id": "VI4ZVPVk9ycJ",
-        "outputId": "c6a8cd05-7dcc-46fc-ee45-96561f52b3c8",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 70,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "File count: 150\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "history_df = pd.DataFrame(model.history.history)\n",
-        "history_df.to_csv('train_history_80%.csv', index=False)\n",
-        "model.save('cats_dogs_classifier_80%.h5')"
-      ],
-      "metadata": {
-        "id": "3U7vm1aSgPls"
-      },
-      "execution_count": 48,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -591,29 +527,50 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Nur für mich - speichern und upload des Modells !!"
+      ],
+      "metadata": {
+        "id": "j48rBvjAIixn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "history_df = pd.DataFrame(model.history.history)\n",
+        "history_df.to_csv('train_history_80%.csv', index=False)\n",
+        "model.save('cats_dogs_classifier_80%.h5')"
+      ],
+      "metadata": {
+        "id": "3U7vm1aSgPls"
+      },
+      "execution_count": 48,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
         "import shutil\n",
-        "\n",
-        "\n",
         "import zipfile\n",
         "\n",
+        "drive.mount('/content/drive')\n",
         "with zipfile.ZipFile('model.zip', 'w',\n",
         "                     compression=zipfile.ZIP_DEFLATED,\n",
         "                     compresslevel=9) as zf:\n",
         "    zf.write('/content/cats_dogs_classifier_80%.h5', arcname='cats_dogs_classifier_80%.h5')\n",
         "\n",
-        "#shutil.copy(\"/content/cats_dogs_classifier_80%.h5\",\"/content/drive/MyDrive/MachineLearning\")"
+        "shutil.copy(\"/content/cats_dogs_classifier_80%.h5\",\"/content/drive/MyDrive/MachineLearning\")"
       ],
       "metadata": {
-        "id": "J8Nz8QN_DWQQ",
-        "outputId": "b5d88925-311b-4a3c-8da4-975c6f7ca0f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J8Nz8QN_DWQQ",
+        "outputId": "b5d88925-311b-4a3c-8da4-975c6f7ca0f6"
       },
       "execution_count": 90,
       "outputs": [
@@ -623,36 +580,6 @@
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "shutil.copy(\"/content/train_history_80%.csv\",\"/content/drive/MyDrive/MachineLearning\")"
-      ],
-      "metadata": {
-        "id": "pA7HOs25EktK",
-        "outputId": "c7506c48-5a2d-42a2-effe-fcdf5a90b188",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 36
-        }
-      },
-      "execution_count": 93,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/content/drive/MyDrive/MachineLearning/train_history_80%.csv'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 93
         }
       ]
     }
