--- a/cat_dog_classification_presentation.ipynb
+++ b/cat_dog_classification_presentation.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "fd7hDq8KXUed"
       },
@@ -66,14 +66,12 @@
         "id": "NAnJam64UT90"
       },
       "source": [
-        "## Ressourcen laden\n",
-        "\n",
-        "Der Code lädt einen **Datensatz** mit Hunden- und Katzenbildern als ZIP-Datei herunter und extrahiert ihn in zwei Ordner, \"train\" und \"validation\"."
+        "## Bilder laden"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "Q1fXlMeMW1YO"
       },
@@ -105,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "gtSQBahSXYrh",
         "outputId": "10fad3d2-3842-4eb4-d992-81786881d68d",
@@ -211,7 +209,7 @@
           "height": 428
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -241,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "OXAzYB9Vt7u_",
         "outputId": "aca41c65-23c3-4089-c629-1dd3377ceab2",
@@ -368,7 +366,7 @@
       "metadata": {
         "id": "KLivHJEC0KkO"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -377,17 +375,13 @@
         "id": "p8LDxx2JIOJw"
       },
       "source": [
-        "# Modell validieren"
+        "## Modell validieren"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "### Plot Validation accurary  & -loss\n",
-        "\n",
-        "> Eingerückter Textblock\n",
-        "\n",
-        "\n",
         "\n",
         "Zuerst wird die CSV-Datei eingelesen, die die Trainingshistorie des heruntergeladenen Modells enthält. Die CSV-Datei enthält Spalten für den Trainingsverlust, den Validierungsverlust, die Trainingsgenauigkeit und die Validierungsgenauigkeit bei jedem Epoch während des Trainings.\n",
         "\n",
@@ -400,7 +394,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -457,12 +451,7 @@
         "history_df = pd.read_csv('Assets_Modell/train_history_82%.csv')\n",
         "\n",
         "history_df.loc[:, ['loss', 'val_loss']].plot()\n",
-        "history_df.loc[:, ['acc', 'val_acc']].plot()\n",
-        "\n",
-        "\n",
-        "test_loss, test_acc = model.evaluate(test_generator, steps=50)\n",
-        "print('Test accuracy:', test_acc)\n",
-        "print('Test loss:', test_loss)"
+        "history_df.loc[:, ['acc', 'val_acc']].plot()"
       ]
     },
     {
@@ -476,7 +465,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "r8SO9pxLB1t0",
         "outputId": "a8ae235a-a490-4bb8-9be3-3b92975f7184",
@@ -541,7 +530,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +553,9 @@
     {
       "cell_type": "code",
       "source": [
-        "model.evaluate(test_generator)"
+        "test_loss, test_acc = model.evaluate(test_generator, steps=50)\n",
+        "print('Test accuracy:', test_acc)\n",
+        "print('Test loss:', test_loss)"
       ],
       "metadata": {
         "id": "SCyedHrFRbXN",
@@ -573,7 +564,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -605,7 +596,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "8SZujwhbgWF9",
         "outputId": "7d3177b0-e814-4b19-8c3b-2bcc0a822e2e",
@@ -701,7 +692,7 @@
       "metadata": {
         "id": "DHqd6EYwNcDo"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +754,7 @@
       "metadata": {
         "id": "TFIGK1rfVJQC"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +807,7 @@
           "height": 334
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
